Completed the Tune tutorial draft

--- a/ray-rllib/00-Ray-RLlib-Overview.ipynb
+++ b/ray-rllib/00-Ray-RLlib-Overview.ipynb
@@ -12,6 +12,8 @@
     "\n",
     "This tutorial, part of [Anyscale Academy](https://anyscale.com/academy), introduces the broad topic of _reinforcement learning_ (RL) and [RLlib](https://ray.readthedocs.io/en/latest/rllib.html), Ray's comprehensive RL library.\n",
     "\n",
+    "![Ray RLlib](../images/RLlib.png)\n",
+    "\n",
     "The lessons in this tutorial use different _environments_ from [OpenAI Gym](https://gym.openai.com/) to illustrate how to train _policies_.\n",
     "\n",
     "See the instructions in the [README](../README.md) for setting up your environment to use this tutorial.\n",
@@ -139,7 +141,7 @@
    "source": [
     "## Getting Help\n",
     "\n",
-    "* The [#tutorial channel](https://ray-distributed.slack.com/archives/C011ML23W5B) on the [Ray Slack](https://ray-distributed.slack.com)\n",
+    "* The [#tutorial channel](https://ray-distributed.slack.com/archives/C011ML23W5B) on the [Ray Slack](https://ray-distributed.slack.com). [Click here](https://forms.gle/9TSdDYUgxYs8SA9e8) to join the Ray Slack.\n",
     "* [Email](mailto:academy@anyscale.com)\n",
     "\n",
     "Find an issue? Please report it!\n",
