--- a/ray-tune/02-More-Ray-Tune-with-MNIST.ipynb
+++ b/ray-tune/02-More-Ray-Tune-with-MNIST.ipynb
@@ -57,7 +57,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following class defines a convolutional neural network."
+    "The following class defines a convolutional neural network.\n",
+    "\n",
+    "> **Tip:** Most of these code definitions can be found in `mnist.py`, too."
    ]
   },
   {
@@ -306,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we modify `train_mnist` to use Tune's tracking logger:"
+    "Next we modify `train_mnist` to use Tune's \"reporting\" logger:"
    ]
   },
   {
@@ -316,14 +318,14 @@
    "outputs": [],
    "source": [
     "def train_mnist(config):\n",
-    "    from ray.tune.track import log\n",
+    "    from ray.tune import report\n",
     "    train_loader, test_loader = get_data_loaders()\n",
     "    model = ConvNet()\n",
     "    optimizer = optim.SGD(model.parameters(), lr=config[\"lr\"], momentum=config['momentum'])\n",
     "    for i in range(10):\n",
     "        train(model, optimizer, train_loader)\n",
     "        acc = test(model, test_loader)\n",
-    "        log(mean_accuracy=acc)"
+    "        report(mean_accuracy=acc)"
    ]
   },
   {
@@ -356,7 +358,7 @@
    },
    "outputs": [],
    "source": [
-    "analysis_func = tune.run(train_mnist, config=config, stop={\"training_iteration\": 10})"
+    "analysis_func = tune.run(train_mnist, config=config, stop={\"training_iteration\": 20})"
    ]
   },
   {
@@ -375,6 +377,33 @@
    "outputs": [],
    "source": [
     "analysis_func.dataframe().sort_values('mean_accuracy', ascending=False).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "analysis_func.dataframe()[['mean_accuracy', 'config/lr', 'config/momentum']].sort_values('mean_accuracy', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How long did it take? We'll compare this value with a different training run in the next lesson."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats = analysis_func.stats()\n",
+    "secs = stats[\"timestamp\"] - stats[\"start_time\"]\n",
+    "print(f'{secs:7.2f} seconds, {secs/60.0:7.2f} minutes')"
    ]
   },
   {
@@ -411,7 +440,13 @@
    },
    "outputs": [],
    "source": [
-    "analysis = tune.run(TrainMNIST, config=config, stop={\"training_iteration\": 10})"
+    "analysis = tune.run(\n",
+    "    TrainMNIST, \n",
+    "    config=config, \n",
+    "    stop={\"training_iteration\": 20},\n",
+    "    verbose=1,                                # Change to 0 or 1 to reduce the output.\n",
+    "    ray_auto_init=False                       # Don't allow Tune to initialize Ray.\n",
+    ")"
    ]
   },
   {
@@ -440,6 +475,40 @@
    "outputs": [],
    "source": [
     "analysis.dataframe().sort_values('mean_accuracy', ascending=False).head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It's easier to see what we want if project out the interesting columns:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "analysis.dataframe()[['mean_accuracy', 'config/lr', 'config/momentum']].sort_values('mean_accuracy', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How long did it take? We'll compare this value with a different training run in the next lesson."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats = analysis.stats()\n",
+    "secs = stats[\"timestamp\"] - stats[\"start_time\"]\n",
+    "print(f'{secs:7.2f} seconds, {secs/60.0:7.2f} minutes')"
    ]
   },
   {
