--- a/ray-tune/04-Ray-SGD.ipynb
+++ b/ray-tune/04-Ray-SGD.ipynb
@@ -23,7 +23,9 @@
     "\n",
     "* **Ease of use:** You can scale PyTorch’s native `DistributedDataParallel` and TensorFlow’s `tf.distribute.MirroredStrategy` without the requirement to monitor individual nodes yourself.\n",
     "* **Composability:** Ray SGD is built on top of the Ray Actor API, enabling seamless integration with existing Ray applications such as RLlib, Tune, and Serve.\n",
-    "* **Scale up and down:** You can start on a single CPU, then scale up to multi-node, multi-CPU, or multi-GPU clusters when needed. All it takes is changing two lines of code."
+    "* **Scale up and down:** You can start on a single CPU, then scale up to multi-node, multi-CPU, or multi-GPU clusters when needed. All it takes is changing two lines of code.\n",
+    "\n",
+    "This [Ray blog post](https://medium.com/distributed-computing-with-ray/faster-and-cheaper-pytorch-with-raysgd-a5a44d4fd220) provides more information on the motivations for Ray SGD, such as the many steps you have to do yourself without it, and how it removes those steps."
    ]
   },
   {
