--- a/ray-tune/References-Hyperparameter-Tuning.ipynb
+++ b/ray-tune/References-Hyperparameter-Tuning.ipynb
@@ -23,7 +23,31 @@
    "source": [
     "## Other Tutorials and Blog Posts\n",
     "\n",
-    "* A [Ray Tune tutorial from Biome](https://www.recogn.ai/biome-text/documentation/tutorials/Hyperparameter_optimization_with_Ray_Tune.html)"
+    "* A [Ray Tune tutorial from Biome](https://www.recogn.ai/biome-text/documentation/tutorials/Hyperparameter_optimization_with_Ray_Tune.html)\n",
+    "* [GridSearchCV 2.0 — New and Improved](https://medium.com/distributed-computing-with-ray/gridsearchcv-2-0-new-and-improved-ee56644cbabf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Information on Search Algorithms and Schedulers\n",
+    "\n",
+    "These techniques attempt to optimize the expensive process of HPO. See the lesson [03 Search Algos and Schedulers](03-Search-Algos-and-Schedulers.ipynb) for discussions.\n",
+    "\n",
+    "### Search Algorithms\n",
+    "\n",
+    "* [Bayesian Optimization](https://github.com/fmfn/BayesianOptimization)\n",
+    "* [BOHB (Bayesian Optimization HyperBand](https://github.com/automl/HpBandSter)\n",
+    "* [HyperOpt](http://hyperopt.github.io/hyperopt)\n",
+    "* [Nevergrad](https://github.com/facebookresearch/nevergrad)\n",
+    "\n",
+    "### Schedulers\n",
+    "\n",
+    "* [Median Stopping Rule](https://research.google.com/pubs/pub46180.html).\n",
+    "* [HyperBand](https://arxiv.org/abs/1603.06560)\n",
+    "* [ASHA](https://openreview.net/forum?id=S1Y7OOlRZ)\n",
+    "* [Population Based Training (PBT)](https://deepmind.com/blog/population-based-training-neural-networks)."
    ]
   },
   {
