--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -25,9 +25,14 @@
     "\n",
     "We want to hear your feedback and any issues you encounter!\n",
     "\n",
-    "* [GitHub issues](https://github.com/anyscale/academy/issues)\n",
-    "* The [#tutorial channel](https://ray-distributed.slack.com/archives/C011ML23W5B) on the [Ray Slack](https://ray-distributed.slack.com)\n",
+    "* The [#tutorial channel](https://ray-distributed.slack.com/archives/C011ML23W5B) on the [Ray Slack](https://ray-distributed.slack.com).  [Click here](https://forms.gle/9TSdDYUgxYs8SA9e8) to join the Ray Slack.\n",
     "* [Email](mailto:academy@anyscale.com)\n",
+    "\n",
+    "Find an issue? Please report it!\n",
+    "\n",
+    "* [GitHub issues](https://github.com/anyscale/academy/issues)\n",
+    "\n",
+    "### Troubleshooting\n",
     "\n",
     "Troubleshooting tips are offered in known areas where you might encounter issues. All are summarized in the [_Troubleshooting, Tips, and Tricks notebook_](reference/Troubleshooting-Tips-Tricks.ipynb). For the details of the Ray API and libraries built on Ray, see the [Ray Docs](https://docs.ray.io/en/latest/).\n",
     "\n",
@@ -52,6 +57,8 @@
     "* Hyperparameter Tuning: see [_Ray Tune_](#user-content-ray-tune)\n",
     "* Accelerated model training with PyTorch: see [_Ray SGD_](#user-content-ray-sgd)\n",
     "* Model serving: see [_Ray Serve_](#user-content-ray-serve)\n",
+    "\n",
+    "If you are a _DevOps_ engineer interested in managing Ray clusters, see [_Ray Cluster Launcher_](#user-content-ray-cluster-launcher).\n",
     "\n",
     "> **Note:** Older Ray tutorials can be found in the [this repo](https://github.com/ray-project/tutorial). They cover topics not yet available here."
    ]
@@ -113,7 +120,7 @@
     "\n",
     "The _crash course_ is intended to focus on learning the core API as quickly as possible, but using nontrivial examples. In contrast, the _Advanced Ray_ tutorial explores more advanced API usage, profiling and debugging applications, and how Ray works behind the scenes.\n",
     "\n",
-    "| #  | Lesson (Notebook)                                                          | Description                               |\n",
+    "|    | Lesson (Notebook)                                                          | Description                               |\n",
     "| :- | :------------------------------------------------------------------------- | :---------------------------------------- |\n",
     "| 00 | [Overview](ray-crash-course/00-Overview-Ray-Crash-Course.ipynb)            | A _table of contents_ for this tutorial.  |\n",
     "| 01 | [Ray Tasks](ray-crash-course/01-Ray-Tasks.ipynb)                           | Understanding how Ray converts normal Python functions into distributed _stateless tasks_. |\n",
@@ -139,7 +146,7 @@
     "\n",
     "Go through the [_Crash Course_](#ray-crash-course) first if you are new to Ray. This tutorial provides a deeper dive into Ray tasks and actors, such as profiling and debugging applications. It also surveys the rest of the core API.\n",
     "\n",
-    "| #  | Lesson (Notebook)                                         | Description                               |\n",
+    "|    | Lesson (Notebook)                                         | Description                               |\n",
     "| :- | :-------------------------------------------------------- | :---------------------------------------- |\n",
     "| 00 | [Overview](advanced-ray/00-Overview-Advanced-Ray.ipynb)   | A _table of contents_ for this tutorial.  |\n",
     "| 01 | [Ray Tasks Revisited](advanced-ray/01-Ray-Tasks-Revisited.ipynb) | More exploration of `ray.wait()` usage patterns, task dependencies and their management, and task profiling techniques. |\n",
@@ -224,9 +231,7 @@
     "| [Extra: Application - Taxi](ray-rllib/explore-rllib/extras/Extra-Application-Taxi.ipynb) | Based on the `Taxi-v3` environment from OpenAI Gym. |\n",
     "| [Extra: Application - Frozen Lake](ray-rllib/explore-rllib/extras/Extra-Application-Frozen-Lake.ipynb) | Based on the `FrozenLake-v0` environment from OpenAI Gym. |\n",
     "\n",
-    "In addition, exercise solutions for this tutorial can be found [here](ray-rllib/explore-rllib/solutions/Ray-RLlib-Solutions.ipynb).\n",
-    "\n",
-    "For earlier versions of some of these tutorials, see [`rllib_exercises`](https://github.com/ray-project/tutorial/blob/master/rllib_exercises/rllib_colab.ipynb) in the original [github.com/ray-project/tutorial](https://github.com/ray-project/tutorial) project."
+    "In addition, exercise solutions for this tutorial can be found [here](ray-rllib/explore-rllib/solutions/Ray-RLlib-Solutions.ipynb)."
    ]
   },
   {
@@ -239,7 +244,16 @@
     "\n",
     "_Ray Tune_ is Ray's system for _hyperparameter tuning_. This tutorial starts with an explanation of what hyperparameter tuning is for and the performances challenges doing it for many applications. Then the tutorial explores how to use _Tune_, how it integrates with several popular ML frameworks, and the algorithms supported in _Tune_.\n",
     "\n",
-    "> **Note:** This tutorial will be released soon."
+    "|     | Lesson | Description |\n",
+    "| :-- | :----- | :---------- |\n",
+    "| 00  | [Ray Tune Overview](ray-tune/00-Ray-Tune-Overview.ipynb) | Overview of this tutorial. |\n",
+    "| 01  | [Understanding Hyperparameter Tuning](ray-tune/01-Understanding-Hyperparameter-Tuning.ipynb) | An explanation of hyperparameters vs. parameters and a non-trivial example of hyperparameter tuning/optimization with Tune. |\n",
+    "| 02  | [More Ray Tune with MNIST](ray-tune/02-More-Ray-Tune-with-MNIST.ipynb) | More exploration of the Tune API, using an MNIST example. |\n",
+    "| 03  | [Search Algos and Schedulers](ray-tune/03-Search-Algos-and-Schedulers.ipynb) | Understanding the concepts of search algorithms and schedulers, again using an MNIST example. |\n",
+    "| 04  | [Ray SGD](ray-tune/04-Ray-SGD.ipynb) | The new Ray SGD API and how to use it. |\n",
+    "|     | [Hyperparameter Tuning References](ray-tune/References-Hyperparameter-Tuning.ipynb) | Overview of this tutorial. |\n",
+    "\n",
+    "In addition, exercise solutions for this tutorial can be found in the `ray-tune/solutions` directory."
    ]
   },
   {
@@ -248,11 +262,9 @@
    "source": [
     "### Ray SGD\n",
     "\n",
-    "Directory: `ray-sgd`\n",
+    "_Ray SGD_ is a tool to more easily exploit a cluster to perform training with _Stochastic Gradient Descent_ using PyTorch and TensorFlow.\n",
     "\n",
-    "_Ray SGD_ is a tool to more easily exploit a cluster to perform training with _Stochastic Gradient Descent_ using PyTorch (TensorFlow support forthcoming).\n",
-    "\n",
-    "> **Note:** This tutorial will be released soon."
+    "Currently, there is a single lesson for Ray SGD as part of the Ray Tune tutorial."
    ]
   },
   {
@@ -263,7 +275,18 @@
     "\n",
     "Directory: `ray-serve`\n",
     "\n",
-    "_Ray Serve_ is Ray's system for scalable _model serving_, with capabilities that also make it suitable for other web server applications. This tutorial starts with an explanation of what's required in model serving, followed by a tour of the API with examples.\n",
+    "_Ray Serve_ is Ray's system for scalable _model serving_, with capabilities that also make it suitable for other web server applications. This tutorial starts with an explanation of what's required in model serving, followed by a tour of the API with examples."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ray Cluster Launcher\n",
+    "\n",
+    "Directory: `ray-cluster-launcher`\n",
+    "\n",
+    "When managing Ray clusters, you will want to use the _Ray Cluster Launcher_.\n",
     "\n",
     "> **Note:** This tutorial will be released soon."
    ]
