--- a/ray-crash-course/00-Overview-Ray-Crash-Course.ipynb
+++ b/ray-crash-course/00-Overview-Ray-Crash-Course.ipynb
@@ -30,6 +30,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Getting Help\n",
+    "\n",
+    "* The [#tutorial channel](https://ray-distributed.slack.com/archives/C011ML23W5B) on the [Ray Slack](https://ray-distributed.slack.com). [Click here](https://forms.gle/9TSdDYUgxYs8SA9e8) to join the Ray Slack.\n",
+    "* [Email](mailto:academy@anyscale.com)\n",
+    "\n",
+    "Find an issue? Please report it!\n",
+    "\n",
+    "* [GitHub issues](https://github.com/anyscale/academy/issues)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## \"Crash Course\" Tutorial Guide\n",
     "\n",
     "| #  | Lesson (Notebook)                                         | Description                               |\n",
