--- a/ray-tune/00-Ray-Tune-Overview.ipynb
+++ b/ray-tune/00-Ray-Tune-Overview.ipynb
@@ -10,9 +10,15 @@
     "\n",
     "![Anyscale Academy](../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
     "\n",
-    "> **NOTE:** This tutorial is under development. This overview is a placeholder.\n",
+    "This tutorial, part of [Anyscale Academy](https://anyscale.com/academy), introduces _hyperparameter tuning_, often called _hyperparameter optimization_ for which we'll use the acronym _HPO_ (since \"hyperparameter\" is often spelled \"hyper parameter\"). \n",
     "\n",
-    "This tutorial, part of [Anyscale Academy](https://anyscale.com/academy), introduces _hyperparameter tuning_, often called _hyperparameter optimization_ for which we'll use the acronym _HPO_ (since \"hyperparameter\" is often spelled \"hyper parameter\"). In particular this tutorial introduces [Ray Tune](http://tune.io), Ray's comprehensive HPO library.\n",
+    "In particular this tutorial introduces [Ray Tune](http://tune.io), Ray's comprehensive HPO library.\n",
+    "\n",
+    "![Ray Tune](../images/RayTune.png)\n",
+    "\n",
+    "There is also a lesson on the new [Ray SGD](https://docs.ray.io/en/latest/raysgd/raysgd.html) API.\n",
+    "\n",
+    "![Ray SGD](../images/RaySGD.png)\n",
     "\n",
     "See the instructions in the [README](../README.md) for setting up your environment to use this tutorial.\n",
     "\n",
@@ -27,9 +33,12 @@
     "| :-- | :----- | :---------- |\n",
     "| 00  | [Ray Tune Overview](00-Ray-Tune-Overview.ipynb) | Overview of this tutorial. |\n",
     "| 01  | [Understanding Hyperparameter Tuning](01-Understanding-Hyperparameter-Tuning.ipynb) | An explanation of hyperparameters vs. parameters and a non-trivial example of hyperparameter tuning/optimization with Tune. |\n",
+    "| 02  | [More Ray Tune with MNIST](02-More-Ray-Tune-with-MNIST.ipynb) | More exploration of the Tune API, using an MNIST example. |\n",
+    "| 03  | [Search Algos and Schedulers](03-Search-Algos-and-Schedulers.ipynb) | Understanding the concepts of search algorithms and schedulers, again using an MNIST example. |\n",
+    "| 04  | [Ray SGD](04-Ray-SGD.ipynb) | The new Ray SGD API and how to use it. |\n",
     "|     | [Hyperparameter Tuning References](References-Hyperparameter-Tuning.ipynb) | Overview of this tutorial. |\n",
     "\n",
-    "In addition, exercise solutions for this tutorial can be found [here](solutions/Ray-Tune-Solutions.ipynb).\n",
+    "In addition, exercise solutions for this tutorial can be found in the `solutions` directory.\n",
     "\n",
     "For other, earlier tutorials that use Tune, see [github.com/ray-project/tutorial](https://github.com/ray-project/tutorial)."
    ]
