Finished Serve tutorial

--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -275,7 +275,13 @@
     "\n",
     "Directory: `ray-serve`\n",
     "\n",
-    "_Ray Serve_ is Ray's system for scalable _model serving_, with capabilities that also make it suitable for other web server applications. This tutorial starts with an explanation of what's required in model serving, followed by a tour of the API with examples."
+    "_Ray Serve_ is Ray's system for scalable _model serving_, with capabilities that also make it suitable for other web server applications. This tutorial starts with an explanation of what's required in model serving, followed by a tour of the API with examples.\n",
+    "\n",
+    "|     | Lesson | Description |\n",
+    "| :-- | :----- | :---------- |\n",
+    "| 00  | [Ray Serve Overview](ray-serve/00-Ray-Serve-Overview.ipynb) | Overview of this tutorial. |\n",
+    "| 01  | [Model Serving Challenges](ray-serve/01-Model-Serving-Challenges.ipynb) | An explanation of common challenges moving models from research to production, and how Ray Serve addresses those challenges. |\n",
+    "| 02  | [Ray Serve Example](ray-serve/02-Ray-Serve-Example.ipynb) | An example of model serving with Ray Serve. |"
    ]
   },
   {
