--- a/ray-serve/00-Ray-Serve-Overview.ipynb
+++ b/ray-serve/00-Ray-Serve-Overview.ipynb
@@ -27,9 +27,7 @@
     "| :-- | :----- | :---------- |\n",
     "| 00  | [Ray Serve Overview](00-Ray-Serve-Overview.ipynb) | Overview of this tutorial. |\n",
     "| 01  | [Model Serving Challenges](01-Model-Serving-Challenges.ipynb) | An explanation of common challenges moving models from research to production, and how Ray Serve addresses those challenges. |\n",
-    "| 02  | [Ray Serve Example](02-Ray-Serve-Example.ipynb) | An example of model serving with Ray Serve. |\n",
-    "\n",
-    "In addition, exercise solutions for this tutorial can be found [here](solutions/Ray-Serve-Solutions.ipynb)."
+    "| 02  | [Ray Serve Example](02-Ray-Serve-Example.ipynb) | An example of model serving with Ray Serve. |"
    ]
   },
   {
