--- a/ray-tune/02-Ray-Tune-with-MNIST.ipynb
+++ b/ray-tune/02-Ray-Tune-with-MNIST.ipynb
@@ -12,7 +12,9 @@
     "\n",
     "The [previous notebook](01-Understanding-Hyperparameter-Tuning.ipynb) explained the concept of hyperparameter tuning/optimization (HPO) and walked through the basics of using [Ray Tune](https://ray.readthedocs.io/en/latest/tune.html). \n",
     "\n",
-    "Now we'll use another example to explore more of the API features. We'll use the [MNIST](http://yann.lecun.com/exdb/mnist/) of hand-written digits and train a [PyTorch](https://pytorch.org/) model to recognize them."
+    "Now we'll use another example to explore more of the API features. We'll use the [MNIST](http://yann.lecun.com/exdb/mnist/) of hand-written digits and train a [PyTorch](https://pytorch.org/) model to recognize them.\n",
+    "\n",
+    "For another, excellent example using Ray Tune, see [this post](https://www.recogn.ai/biome-text/documentation/tutorials/Hyperparameter_optimization_with_Ray_Tune.html#download-the-data-and-create-the-vocabulary)."
    ]
   },
   {
