--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -248,7 +248,7 @@
     "| :-- | :----- | :---------- |\n",
     "| 00  | [Ray Tune Overview](ray-tune/00-Ray-Tune-Overview.ipynb) | Overview of this tutorial. |\n",
     "| 01  | [Understanding Hyperparameter Tuning](ray-tune/01-Understanding-Hyperparameter-Tuning.ipynb) | An explanation of hyperparameters vs. parameters and a non-trivial example of hyperparameter tuning/optimization with Tune. |\n",
-    "| 02  | [More Ray Tune with MNIST](ray-tune/02-More-Ray-Tune-with-MNIST.ipynb) | More exploration of the Tune API, using an MNIST example. |\n",
+    "| 02  | [Ray Tune with MNIST](ray-tune/02-Ray-Tune-with-MNIST.ipynb) | More exploration of the Tune API, using an MNIST example. |\n",
     "| 03  | [Search Algos and Schedulers](ray-tune/03-Search-Algos-and-Schedulers.ipynb) | Understanding the concepts of search algorithms and schedulers, again using an MNIST example. |\n",
     "| 04  | [Ray SGD](ray-tune/04-Ray-SGD.ipynb) | The new Ray SGD API and how to use it. |\n",
     "|     | [Hyperparameter Tuning References](ray-tune/References-Hyperparameter-Tuning.ipynb) | Overview of this tutorial. |\n",
