--- a/ray-tune/00-Ray-Tune-Overview.ipynb
+++ b/ray-tune/00-Ray-Tune-Overview.ipynb
@@ -33,7 +33,7 @@
     "| :-- | :----- | :---------- |\n",
     "| 00  | [Ray Tune Overview](00-Ray-Tune-Overview.ipynb) | Overview of this tutorial. |\n",
     "| 01  | [Understanding Hyperparameter Tuning](01-Understanding-Hyperparameter-Tuning.ipynb) | An explanation of hyperparameters vs. parameters and a non-trivial example of hyperparameter tuning/optimization with Tune. |\n",
-    "| 02  | [More Ray Tune with MNIST](02-More-Ray-Tune-with-MNIST.ipynb) | More exploration of the Tune API, using an MNIST example. |\n",
+    "| 02  | [Ray Tune with MNIST](02-Ray-Tune-with-MNIST.ipynb) | More exploration of the Tune API, using an MNIST example. |\n",
     "| 03  | [Search Algos and Schedulers](03-Search-Algos-and-Schedulers.ipynb) | Understanding the concepts of search algorithms and schedulers, again using an MNIST example. |\n",
     "| 04  | [Ray SGD](04-Ray-SGD.ipynb) | The new Ray SGD API and how to use it. |\n",
     "|     | [Hyperparameter Tuning References](References-Hyperparameter-Tuning.ipynb) | Overview of this tutorial. |\n",
