Fixed the references to the Ray Slack to include the signup form

--- a/advanced-ray/00-Overview-Advanced-Ray.ipynb
+++ b/advanced-ray/00-Overview-Advanced-Ray.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "## Getting Help\n",
     "\n",
-    "* The [#tutorial channel](https://ray-distributed.slack.com/archives/C011ML23W5B) on the [Ray Slack](https://ray-distributed.slack.com). [Click here](https://forms.gle/9TSdDYUgxYs8SA9e8) to join the Ray Slack.\n",
+    "* The [#tutorial channel](https://ray-distributed.slack.com/archives/C011ML23W5B) on the [Ray Slack](https://ray-distributed.slack.com). [Click here](https://forms.gle/9TSdDYUgxYs8SA9e8) to join.\n",
     "* [Email](mailto:academy@anyscale.com)\n",
     "\n",
     "Find an issue? Please report it!\n",
