--- a/ray-crash-course/03-Why-Ray.ipynb
+++ b/ray-crash-course/03-Why-Ray.ipynb
@@ -128,7 +128,7 @@
     "    * [Academy](https://anyscale.com/academy/): Training for Ray and Anyscale products - What you're looking at!    \n",
     "    * [Jobs](https://jobs.lever.co/anyscale): Yes, we're hiring!\n",
     "* Community:\n",
-    "    * [Ray Slack](ray-distributed.slack.com): The best forum for help on Ray. Use the `#tutorials` channel to ask for help on these tutorials!\n",
+    "    * [Ray Slack](ray-distributed.slack.com) ([Click here](https://forms.gle/9TSdDYUgxYs8SA9e8) to join): The best forum for help on Ray. Use the `#tutorials` channel to ask for help on these tutorials!\n",
     "    * [ray-dev mailing list](https://groups.google.com/forum/?nomobile=true#!forum/ray-dev)\n",
     "    * [@raydistributed](https://twitter.com/raydistributed)\n",
     "    * [@anyscalecompute](https://twitter.com/anyscalecompute)"
