--- a/reference/Troubleshooting-Tips-Tricks.ipynb
+++ b/reference/Troubleshooting-Tips-Tricks.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## Getting Help\n",
     "\n",
-    "* The [#tutorial channel](https://ray-distributed.slack.com/archives/C011ML23W5B) on the [Ray Slack](https://ray-distributed.slack.com)\n",
+    "* The [#tutorial channel](https://ray-distributed.slack.com/archives/C011ML23W5B) on the [Ray Slack](https://ray-distributed.slack.com). [Click here](https://forms.gle/9TSdDYUgxYs8SA9e8) to join.\n",
     "* [Email](mailto:academy@anyscale.com)\n",
     "\n",
     "Find an issue? Please report it!\n",
@@ -37,7 +37,7 @@
     "    * [Academy](https://anyscale.com/academy/): Training for Ray and Anyscale products    \n",
     "    * [Jobs](https://jobs.lever.co/anyscale): Yes, we're hiring!\n",
     "* Community:\n",
-    "    * [Ray Slack](ray-distributed.slack.com): The best forum for help on Ray. Use the `#tutorials` channel to ask for help on these tutorials!\n",
+    "    * [Ray Slack](ray-distributed.slack.com) ([Click here](https://forms.gle/9TSdDYUgxYs8SA9e8) to join): The best forum for help on Ray. Use the `#tutorials` channel to ask for help on these tutorials!\n",
     "    * [ray-dev mailing list](https://groups.google.com/forum/?nomobile=true#!forum/ray-dev)\n",
     "    * [@raydistributed](https://twitter.com/raydistributed)\n",
     "    * [@anyscalecompute](https://twitter.com/anyscalecompute)"
