Removed the unnecessary ray_auto_init=False argument to ray.tune

--- a/ray-rllib/multi-armed-bandits/03-Simple-Multi-Armed-Bandit.ipynb
+++ b/ray-rllib/multi-armed-bandits/03-Simple-Multi-Armed-Bandit.ipynb
@@ -151,8 +151,6 @@
    "source": [
     "Now use Tune to train the policy for this bandit. But first, we want to make sure that Ray is running and we want to initialize Ray in this \"driver\" program explicitly. \n",
     "\n",
-    "> **Note:** The call to `tune.run` below would handle Ray initialization for us, if we omitted the `ray_auto_init=False` option, but that would lead to multiple Ray clusters running. So, we prevent Tune from doing this for us and we initialize Ray explicitly ourselves.\n",
-    "\n",
     "The following shell command will probably print _INFO: Ray is already running._ If not, follow the instructions it prints to start Ray."
    ]
   },
@@ -208,6 +206,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calling `ray.tune.run` below would handle Ray initialization for us, if Ray isn't already running. If you want to prevent this and have Tune exit with an error when Ray isn't already initialized, then pass `ray_auto_init=False`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -220,8 +225,14 @@
     "analysis = ray.tune.run(\"contrib/LinUCB\", config=config, stop=stop, \n",
     "                        progress_reporter=JupyterNotebookReporter(overwrite=False),  # This is the default, actually.\n",
     "                        verbose=2,     # Change to 0 or 1 to reduce the output.\n",
-    "                        ray_auto_init=False,    # Don't allow Tune to initialize Ray.\n",
     "                       )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(A lot of output is printed with `verbose` set to `2`. Use `0` for no output and `1` for short summaries.)"
    ]
   },
   {
@@ -346,8 +357,7 @@
     "```python\n",
     "analysis = ray.tune.run(\"contrib/LinUCB\", config=config, stop=stop, \n",
     "                        progress_reporter=JupyterNotebookReporter(overwrite=False),  # This is the default, actually.\n",
-    "                        verbose=2,              # Change to 0 or 1 to reduce the output.\n",
-    "                        ray_auto_init=False)    # Don't allow Tune to initialize Ray.\n",
+    "                        verbose=1)              # Change to 0 or 1 to reduce the output.\n",
     "```\n",
     "\n",
     "Change `contrib/LinUCB` to `contrib/LinTS`.  "
