--- a/ray-rllib/multi-armed-bandits/05-Linear-Thompson-Sampling.ipynb
+++ b/ray-rllib/multi-armed-bandits/05-Linear-Thompson-Sampling.ipynb
@@ -202,8 +202,7 @@
     "    stop={\"training_iteration\": training_iterations},\n",
     "    num_samples=2,\n",
     "    checkpoint_at_end=True,\n",
-    "    verbose=2,              # Change to 0 or 1 to reduce the output.\n",
-    "    ray_auto_init=False,    # Don't allow Tune to initialize Ray.\n",
+    "    verbose=1\n",
     ")\n",
     "\n",
     "print(\"The trials took\", time.time() - start_time, \"seconds\\n\")"
