--- a/ray-rllib/multi-armed-bandits/06-Market-Example.ipynb
+++ b/ray-rllib/multi-armed-bandits/06-Market-Example.ipynb
@@ -481,8 +481,7 @@
     "    stop=stop,\n",
     "    num_samples=3,    \n",
     "    checkpoint_at_end=True,\n",
-    "    verbose=2,              # Change to 0 or 1 to reduce the output.\n",
-    "    ray_auto_init=False,    # Don't allow Tune to initialize Ray.\n",
+    "    verbose=1\n",
     ")"
    ]
   },
