--- a/ray-serve/01-Model-Serving-Challenges.ipynb
+++ b/ray-serve/01-Model-Serving-Challenges.ipynb
@@ -80,7 +80,7 @@
    "source": [
     "## Two Simple Ray Serve Examples\n",
     "\n",
-    "We'll explore a more detailed example in the next lesson. Here we explore how simple deployments are simple with Ray Serve! We will first use a function that does \"scoring\", then a class.\n",
+    "We'll explore a more detailed example in the next lesson, where we actually serve ML models. Here we explore how simple deployments are simple with Ray Serve! We will first use a function that does \"scoring\", sufficient for _stateless_ scenarios, then a use class, which enables _stateful_ scenarios.\n",
     "\n",
     "But first, initialize Ray as before:"
    ]
@@ -121,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that Serve leverages the [Flask API](https://flask.palletsprojects.com/en/1.1.x/api/), which is often familiar, as it is a natural first approach for deploying models as RESTful services."
+    "Now we initialize Serve itself:"
    ]
   },
   {
@@ -131,6 +131,15 @@
    "outputs": [],
    "source": [
     "serve.init(name='serve-example-1')  # Name for this Serve instance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, define our stateless function for processing requests.\n",
+    "\n",
+    "Note that Serve leverages the [Flask API](https://flask.palletsprojects.com/en/1.1.x/api/), which is often familiar to developers, as it is a natural first approach for deploying models as RESTful services."
    ]
   },
   {
