--- a/ray-tune/01-Understanding-Hyperparameter-Tuning.ipynb
+++ b/ray-tune/01-Understanding-Hyperparameter-Tuning.ipynb
@@ -139,9 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we start Ray in this \"driver\" program (notebook).\n",
-    "\n",
-    "> **Note:** The call to `tune.run` below would handle Ray initialization for us, if we omitted the `ray_auto_init=False` option, but that would lead to multiple Ray clusters running. So, we prevent Tune from doing this for us and we initialize Ray explicitly ourselves."
+    "Now we start Ray in this \"driver\" program (notebook)."
    ]
   },
   {
@@ -169,7 +167,9 @@
     "\n",
     "However, the two we've chosen are good enough as we'll see. We'll consider what \"good enough\" means when we look at the results.\n",
     "\n",
-    "The next cell runs Tune for this purpose. The comments explain what each argument does. We'll do four tries, one for each combination of the two possible values for the two hidden layers."
+    "The next cell runs Tune for this purpose. The comments explain what each argument does. We'll do four tries, one for each combination of the two possible values for the two hidden layers.\n",
+    "\n",
+    "> **Note:** `tune.run` will handle Ray initialization for us, if it isn't already initialized. To force Tune to throw an error instead, pass the argument `ray_auto_init=False`."
    ]
   },
   {
@@ -196,8 +196,7 @@
     "        },\n",
     "        \"eager\": False,                       # Flag for TensorFlow; don't use eager evaluation.\n",
     "    },\n",
-    "    verbose=2,                                # Change to 0 or 1 to reduce the output.\n",
-    "    ray_auto_init=False                       # Don't allow Tune to initialize Ray.\n",
+    "    verbose=1\n",
     ")"
    ]
   },
