--- a/ray-tune/02-Ray-Tune-with-MNIST.ipynb
+++ b/ray-tune/02-Ray-Tune-with-MNIST.ipynb
@@ -446,8 +446,7 @@
     "    TrainMNIST, \n",
     "    config=config, \n",
     "    stop={\"training_iteration\": 20},\n",
-    "    verbose=1,                                # Change to 0 or 1 to reduce the output.\n",
-    "    ray_auto_init=False                       # Don't allow Tune to initialize Ray.\n",
+    "    verbose=1\n",
     ")"
    ]
   },
