--- a/ray-tune/solutions/01-Understanding-Hyperparameter-Tuning-Solutions.ipynb
+++ b/ray-tune/solutions/01-Understanding-Hyperparameter-Tuning-Solutions.ipynb
@@ -97,8 +97,7 @@
     "        },\n",
     "        \"eager\": False,\n",
     "    },\n",
-    "    verbose=2,\n",
-    "    ray_auto_init=False\n",
+    "    verbose=1\n",
     ")"
    ]
   },
