--- a/ray-tune/solutions/03-Search-Algos-and-Schedulers-Solutions.ipynb
+++ b/ray-tune/solutions/03-Search-Algos-and-Schedulers-Solutions.ipynb
@@ -138,8 +138,7 @@
     "    config=config,\n",
     "    stop={\"mean_accuracy\": 0.97, \"training_iteration\": 600},\n",
     "    num_samples=8,\n",
-    "    verbose=1,     \n",
-    "    ray_auto_init=False\n",
+    "    verbose=1\n",
     ")"
    ]
   },
