--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -251,7 +251,7 @@
     "| 02  | [Ray Tune with MNIST](ray-tune/02-Ray-Tune-with-MNIST.ipynb) | More exploration of the Tune API, using an MNIST example. |\n",
     "| 03  | [Search Algos and Schedulers](ray-tune/03-Search-Algos-and-Schedulers.ipynb) | Understanding the concepts of search algorithms and schedulers, again using an MNIST example. |\n",
     "| 04  | [Ray SGD](ray-tune/04-Ray-SGD.ipynb) | The new Ray SGD API and how to use it. |\n",
-    "|     | [Hyperparameter Tuning References](ray-tune/References-Hyperparameter-Tuning.ipynb) | Overview of this tutorial. |\n",
+    "|     | [Hyperparameter Tuning References](ray-tune/References-Hyperparameter-Tuning.ipynb) | References for hyperparameter tuning. |\n",
     "\n",
     "In addition, exercise solutions for this tutorial can be found in the `ray-tune/solutions` directory."
    ]
@@ -264,7 +264,7 @@
     "\n",
     "_Ray SGD_ is a tool to more easily exploit a cluster to perform training with _Stochastic Gradient Descent_ using PyTorch and TensorFlow.\n",
     "\n",
-    "Currently, there is a single lesson for Ray SGD as part of the Ray Tune tutorial."
+    "Currently, there is a lesson for Ray SGD as part of the Ray Tune tutorial."
    ]
   },
   {
