--- a/ray-rllib/multi-armed-bandits/04-Linear-Upper-Confidence-Bound.ipynb
+++ b/ray-rllib/multi-armed-bandits/04-Linear-Upper-Confidence-Bound.ipynb
@@ -185,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next cell will print a lot of output. Use the right-click menu, option _Enable Scrolling for Outputs_ to encapsulate the output in a scrollable text box."
+    "Now run Tune:"
    ]
   },
   {
@@ -203,8 +203,7 @@
     "    config=UCB_CONFIG,\n",
     "    stop={\"training_iteration\": training_iterations},\n",
     "    num_samples=5,\n",
-    "    verbose=2,  # Change to 0 or 1 to reduce the output.\n",
-    "    ray_auto_init=False,    # Don't allow Tune to initialize Ray.\n",
+    "    verbose=1\n",
     ")\n",
     "\n",
     "print(\"The trials took\", time.time() - start_time, \"seconds\\n\")"
