--- a/ray-rllib/multi-armed-bandits/solutions/Multi-Armed-Bandits-Solutions.ipynb
+++ b/ray-rllib/multi-armed-bandits/solutions/Multi-Armed-Bandits-Solutions.ipynb
@@ -154,8 +154,7 @@
     "\n",
     "analysis = ray.tune.run(\"contrib/LinUCB\", config=config, stop=stop, \n",
     "                        progress_reporter=JupyterNotebookReporter(overwrite=False),  # This is the default, actually.\n",
-    "                        verbose=2,              # Change to 0 or 1 to reduce the output.\n",
-    "                        ray_auto_init=False)    # Don't allow Tune to initialize Ray.\n",
+    "                        verbose=1)\n",
     "\n",
     "print(\"The trials took\", time.time() - start_time, \"seconds\\n\")"
    ]
@@ -288,8 +287,7 @@
     "\n",
     "analysis = ray.tune.run(\"contrib/LinUCB\", config=config, stop=stop, \n",
     "                        progress_reporter=JupyterNotebookReporter(overwrite=False),  # This is the default, actually.\n",
-    "                        verbose=2,  # Change to 0 or 1 to reduce the output.\n",
-    "                        ray_auto_init=False)    # Don't allow Tune to initialize Ray.\n",
+    "                        verbose=1)\n",
     "\n",
     "print(\"The trials took\", time.time() - start_time, \"seconds\\n\")"
    ]
@@ -353,8 +351,7 @@
     "\n",
     "analysis = ray.tune.run(\"contrib/LinTS\", config=config, stop=stop, \n",
     "                        progress_reporter=JupyterNotebookReporter(overwrite=False),  # This is the default, actually.\n",
-    "                        verbose=2,  # Change to 0 or 1 to reduce the output.\n",
-    "                        ray_auto_init=False)    # Don't allow Tune to initialize Ray.\n",
+    "                        verbose=1)\n",
     "\n",
     "print(\"The trials took\", time.time() - start_time, \"seconds\\n\")"
    ]
@@ -401,8 +398,7 @@
     "\n",
     "analysis = ray.tune.run(\"contrib/LinTS\", config=config, stop=stop, \n",
     "                        progress_reporter=JupyterNotebookReporter(overwrite=False),  # This is the default, actually.\n",
-    "                        verbose=2,  # Change to 0 or 1 to reduce the output.\n",
-    "                        ray_auto_init=False)    # Don't allow Tune to initialize Ray.\n",
+    "                        verbose=1)\n",
     "\n",
     "print(\"The trials took\", time.time() - start_time, \"seconds\\n\")"
    ]
@@ -475,7 +471,7 @@
     "    stop={\"training_iteration\": training_iterations},\n",
     "    num_samples=5,\n",
     "    checkpoint_at_end=False,\n",
-    "    ray_auto_init=False,\n",
+    "    verbose=1\n",
     ")\n",
     "\n",
     "print(\"The trials took\", time.time() - start_time, \"seconds\\n\")"
@@ -596,8 +592,7 @@
     "        stop={\"training_iteration\": training_iterations},\n",
     "        num_samples=2,\n",
     "        checkpoint_at_end=True,\n",
-    "        ray_auto_init=False,\n",
-    "        )\n",
+    "        verbose=1)\n",
     "\n",
     "    print(\"The trials took\", time.time() - start_time, \"seconds\\n\")\n",
     "\n",
@@ -935,8 +930,7 @@
     "    stop=stop,\n",
     "    num_samples=3,    \n",
     "    checkpoint_at_end=True,\n",
-    "    verbose=2,            # Change to 0 or 1 to reduce the output.\n",
-    "    ray_auto_init=False,    # Don't allow Tune to initialize Ray.\n",
+    "    verbose=1\n",
     ")"
    ]
   },
