--- a/ray-tune/00-Ray-Tune-Overview.ipynb
+++ b/ray-tune/00-Ray-Tune-Overview.ipynb
@@ -36,7 +36,7 @@
     "| 02  | [Ray Tune with MNIST](02-Ray-Tune-with-MNIST.ipynb) | More exploration of the Tune API, using an MNIST example. |\n",
     "| 03  | [Search Algos and Schedulers](03-Search-Algos-and-Schedulers.ipynb) | Understanding the concepts of search algorithms and schedulers, again using an MNIST example. |\n",
     "| 04  | [Ray SGD](04-Ray-SGD.ipynb) | The new Ray SGD API and how to use it. |\n",
-    "|     | [Hyperparameter Tuning References](References-Hyperparameter-Tuning.ipynb) | Overview of this tutorial. |\n",
+    "|     | [Hyperparameter Tuning References](References-Hyperparameter-Tuning.ipynb) | References for hyperparameter tuning. |\n",
     "\n",
     "In addition, exercise solutions for this tutorial can be found in the `solutions` directory.\n",
     "\n",
