--- a/ray-tune/03-Search-Algos-and-Schedulers.ipynb
+++ b/ray-tune/03-Search-Algos-and-Schedulers.ipynb
@@ -209,8 +209,7 @@
     "    scheduler=scheduler, \n",
     "    search_alg=search_algorithm, \n",
     "    num_samples=12,                           # Force it try all 12 combinations\n",
-    "    verbose=2,                                # Change to 0 or 1 to reduce the output.\n",
-    "    ray_auto_init=False                       # Don't allow Tune to initialize Ray.\n",
+    "    verbose=1\n",
     ")"
    ]
   },
@@ -332,8 +331,7 @@
     "    config=config,\n",
     "    stop={\"mean_accuracy\": 0.97, \"training_iteration\": 600},\n",
     "    num_samples=8,\n",
-    "    verbose=1,     \n",
-    "    ray_auto_init=False\n",
+    "    verbose=1\n",
     ")"
    ]
   },
