Cleaned up how the ray.tune run times is reported

--- a/ray-rllib/multi-armed-bandits/03-Simple-Multi-Armed-Bandit.ipynb
+++ b/ray-rllib/multi-armed-bandits/03-Simple-Multi-Armed-Bandit.ipynb
@@ -220,19 +220,19 @@
    },
    "outputs": [],
    "source": [
-    "start_time = time.time()\n",
-    "\n",
     "analysis = ray.tune.run(\"contrib/LinUCB\", config=config, stop=stop, \n",
-    "                        progress_reporter=JupyterNotebookReporter(overwrite=False),  # This is the default, actually.\n",
-    "                        verbose=2,     # Change to 0 or 1 to reduce the output.\n",
-    "                       )"
+    "    progress_reporter=JupyterNotebookReporter(overwrite=False),  # This is the default, actually.\n",
+    "    verbose=2,     # Change to 0 or 1 to reduce the output.\n",
+    "    )"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(A lot of output is printed with `verbose` set to `2`. Use `0` for no output and `1` for short summaries.)"
+    "(A lot of output is printed with `verbose` set to `2`. Use `0` for no output and `1` for short summaries.)\n",
+    "\n",
+    "How long did it take?"
    ]
   },
   {
@@ -243,7 +243,9 @@
    },
    "outputs": [],
    "source": [
-    "print(\"The trials took\", time.time() - start_time, \"seconds\\n\")"
+    "stats = analysis.stats()\n",
+    "secs = stats[\"timestamp\"] - stats[\"start_time\"]\n",
+    "print(f'{secs:7.2f} seconds, {secs/60.0:7.2f} minutes')"
    ]
   },
   {
@@ -356,8 +358,8 @@
     "\n",
     "```python\n",
     "analysis = ray.tune.run(\"contrib/LinUCB\", config=config, stop=stop, \n",
-    "                        progress_reporter=JupyterNotebookReporter(overwrite=False),  # This is the default, actually.\n",
-    "                        verbose=1)              # Change to 0 or 1 to reduce the output.\n",
+    "    progress_reporter=JupyterNotebookReporter(overwrite=False),  # This is the default, actually.\n",
+    "    verbose=1)\n",
     "```\n",
     "\n",
     "Change `contrib/LinUCB` to `contrib/LinTS`.  "
