--- a/ray-rllib/multi-armed-bandits/04-Linear-Upper-Confidence-Bound.ipynb
+++ b/ray-rllib/multi-armed-bandits/04-Linear-Upper-Confidence-Bound.ipynb
@@ -196,17 +196,38 @@
    },
    "outputs": [],
    "source": [
-    "start_time = time.time()\n",
-    "\n",
     "analysis = ray.tune.run(\n",
     "    \"contrib/LinUCB\",\n",
     "    config=UCB_CONFIG,\n",
     "    stop={\"training_iteration\": training_iterations},\n",
     "    num_samples=5,\n",
     "    verbose=1\n",
-    ")\n",
-    "\n",
-    "print(\"The trials took\", time.time() - start_time, \"seconds\\n\")"
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How long did it take?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats = analysis.stats()\n",
+    "secs = stats[\"timestamp\"] - stats[\"start_time\"]\n",
+    "print(f'{secs:7.2f} seconds, {secs/60.0:7.2f} minutes')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's look at the data:"
    ]
   },
   {
