--- a/ray-rllib/multi-armed-bandits/05-Linear-Thompson-Sampling.ipynb
+++ b/ray-rllib/multi-armed-bandits/05-Linear-Thompson-Sampling.ipynb
@@ -194,8 +194,6 @@
    },
    "outputs": [],
    "source": [
-    "start_time = time.time()\n",
-    "\n",
     "analysis = ray.tune.run(\n",
     "    LinTSTrainer,\n",
     "    config=TS_CONFIG,\n",
@@ -203,9 +201,27 @@
     "    num_samples=2,\n",
     "    checkpoint_at_end=True,\n",
     "    verbose=1\n",
-    ")\n",
-    "\n",
-    "print(\"The trials took\", time.time() - start_time, \"seconds\\n\")"
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How long did it take?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "stats = analysis.stats()\n",
+    "secs = stats[\"timestamp\"] - stats[\"start_time\"]\n",
+    "print(f'{secs:7.2f} seconds, {secs/60.0:7.2f} minutes')"
    ]
   },
   {
