--- a/ray-rllib/multi-armed-bandits/06-Market-Example.ipynb
+++ b/ray-rllib/multi-armed-bandits/06-Market-Example.ipynb
@@ -486,6 +486,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats = analysis.stats()\n",
+    "secs = stats[\"timestamp\"] - stats[\"start_time\"]\n",
+    "print(f'{secs:7.2f} seconds, {secs/60.0:7.2f} minutes')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
