--- a/ray-rllib/multi-armed-bandits/solutions/Multi-Armed-Bandits-Solutions.ipynb
+++ b/ray-rllib/multi-armed-bandits/solutions/Multi-Armed-Bandits-Solutions.ipynb
@@ -150,13 +150,20 @@
    },
    "outputs": [],
    "source": [
-    "start_time = time.time()\n",
-    "\n",
     "analysis = ray.tune.run(\"contrib/LinUCB\", config=config, stop=stop, \n",
-    "                        progress_reporter=JupyterNotebookReporter(overwrite=False),  # This is the default, actually.\n",
-    "                        verbose=1)\n",
-    "\n",
-    "print(\"The trials took\", time.time() - start_time, \"seconds\\n\")"
+    "    progress_reporter=JupyterNotebookReporter(overwrite=False),  # This is the default, actually.\n",
+    "    verbose=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats = analysis.stats()\n",
+    "secs = stats[\"timestamp\"] - stats[\"start_time\"]\n",
+    "print(f'{secs:7.2f} seconds, {secs/60.0:7.2f} minutes')"
    ]
   },
   {
@@ -283,13 +290,20 @@
    },
    "outputs": [],
    "source": [
-    "start_time = time.time()\n",
-    "\n",
     "analysis = ray.tune.run(\"contrib/LinUCB\", config=config, stop=stop, \n",
-    "                        progress_reporter=JupyterNotebookReporter(overwrite=False),  # This is the default, actually.\n",
-    "                        verbose=1)\n",
-    "\n",
-    "print(\"The trials took\", time.time() - start_time, \"seconds\\n\")"
+    "    progress_reporter=JupyterNotebookReporter(overwrite=False),  # This is the default, actually.\n",
+    "    verbose=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats = analysis.stats()\n",
+    "secs = stats[\"timestamp\"] - stats[\"start_time\"]\n",
+    "print(f'{secs:7.2f} seconds, {secs/60.0:7.2f} minutes')"
    ]
   },
   {
@@ -347,13 +361,13 @@
     "    \"env\": SimpleContextualBandit2,\n",
     "}\n",
     "\n",
-    "start_time = time.time()\n",
-    "\n",
     "analysis = ray.tune.run(\"contrib/LinTS\", config=config, stop=stop, \n",
-    "                        progress_reporter=JupyterNotebookReporter(overwrite=False),  # This is the default, actually.\n",
-    "                        verbose=1)\n",
+    "    progress_reporter=JupyterNotebookReporter(overwrite=False),  # This is the default, actually.\n",
+    "    verbose=1)\n",
     "\n",
-    "print(\"The trials took\", time.time() - start_time, \"seconds\\n\")"
+    "stats = analysis.stats()\n",
+    "secs = stats[\"timestamp\"] - stats[\"start_time\"]\n",
+    "print(f'{secs:7.2f} seconds, {secs/60.0:7.2f} minutes')"
    ]
   },
   {
@@ -463,8 +477,6 @@
    },
    "outputs": [],
    "source": [
-    "start_time = time.time()\n",
-    "\n",
     "analysis = ray.tune.run(\n",
     "    \"contrib/LinUCB\",\n",
     "    config=UCB_CONFIG,\n",
@@ -474,7 +486,9 @@
     "    verbose=1\n",
     ")\n",
     "\n",
-    "print(\"The trials took\", time.time() - start_time, \"seconds\\n\")"
+    "stats = analysis.stats()\n",
+    "secs = stats[\"timestamp\"] - stats[\"start_time\"]\n",
+    "print(f'{secs:7.2f} seconds, {secs/60.0:7.2f} minutes')"
    ]
   },
   {
@@ -932,6 +946,17 @@
     "    checkpoint_at_end=True,\n",
     "    verbose=1\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats = analysis.stats()\n",
+    "secs = stats[\"timestamp\"] - stats[\"start_time\"]\n",
+    "print(f'{secs:7.2f} seconds, {secs/60.0:7.2f} minutes')"
    ]
   },
   {
