--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -133,7 +133,13 @@
     "\n",
     "In addition, exercise solutions for this tutorial can be found [here](advanced-ray/solutions/Ray-Crash-Course-Solutions.ipynb).\n",
     "\n",
-    "Once you've completed this tutorial, go through _Advanced Ray_ or explore one of the ML-related library tutorials, in any order."
+    "Once you've completed this tutorial, go through _Advanced Ray_ or explore one of the ML-related library tutorials, in any order.\n",
+    "\n",
+    "#### Give Us Feedback!\n",
+    "\n",
+    "Let us know what you like and don't like about this reinforcement learning and Ray RLlib tutorial.\n",
+    "\n",
+    "* [Survey](https://forms.gle/PKYkFvrAf5M3jL3B8)"
    ]
   },
   {
@@ -153,7 +159,13 @@
     "| 02 | [Ray Actors Revisited](advanced-ray/02-Ray-Actors-Revisited.ipynb) | A more in-depth look at actor characteristics and profiling actor performance using the _Ray Dashboard_. |\n",
     "| 03 | [Ray Internals](advanced-ray/03-Ray-Internals.ipynb) | Explores the architecture of Ray, task scheduling, the Object Store, etc. |\n",
     "\n",
-    "In addition, exercise solutions for this tutorial can be found [here](advanced-ray/solutions/Advanced-Ray-Solutions.ipynb)."
+    "In addition, exercise solutions for this tutorial can be found [here](advanced-ray/solutions/Advanced-Ray-Solutions.ipynb).\n",
+    "\n",
+    "#### Give Us Feedback!\n",
+    "\n",
+    "Let us know what you like and don't like about this reinforcement learning and Ray RLlib tutorial.\n",
+    "\n",
+    "* [Survey](https://forms.gle/PKYkFvrAf5M3jL3B8)"
    ]
   },
   {
@@ -171,6 +183,18 @@
     "Because of the breadth of RL this tutorial is divided into several sections.\n",
     "\n",
     "> **Tip:** See [Ray RLlib Overview](ray-rllib/00-Ray-RLlib-Overview.ipynb) for a suggested _learning plan_.\n",
+    "\n",
+    "#### Give Us Feedback!\n",
+    "\n",
+    "Let us know what you like and don't like about this reinforcement learning and Ray RLlib tutorial.\n",
+    "\n",
+    "* [Survey](https://forms.gle/D2Lo4K5tkcqsWeKU8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Tutorial Sections\n",
     "\n",
     "Because of the breadth of RL this tutorial is divided into several sections. See below for a recommended _learning plan_.\n",
@@ -219,7 +243,7 @@
     "|    | Lesson | Description |\n",
     "| :- | :----- | :---------- |\n",
     "| 00 | [Explore RLlib Overview](ray-rllib/explore-rllib/00-Explore-RLlib-Overview.ipynb) | Overview of this set of lessons. |\n",
-    "| 01 | [Application - Cart Pole](ray-rllib/explore-rllib/01-Application-Cart-Pole.ipynb) | The best starting place for learning how to use RL, in this case to train a moving car to balance a vertical pole. Based on the `CartPole-v0` environment from OpenAI Gym, combined with RLlib. |\n",
+    "| 01 | [Application - Cart Pole](ray-rllib/explore-rllib/01-Application-Cart-Pole.ipynb) | The best starting place for learning how to use RL, in this case to train a moving car to balance a vertical pole. Based on the `CartPole-v1` environment from OpenAI Gym, combined with RLlib. |\n",
     "| 02 | [Application: Bipedal Walker](ray-rllib/explore-rllib/02-Bipedal-Walker.ipynb) | Train a two-legged robot simulator. This is an optional lesson, due to the longer compute times required, but fun to try. |\n",
     "| 03 | [Custom Environments and Reward Shaping](ray-rllib/explore-rllib/03-Custom-Environments-Reward-Shaping.ipynb) | How to customize environments and rewards for your applications. |\n",
     "\n",
@@ -232,6 +256,17 @@
     "| [Extra: Application - Frozen Lake](ray-rllib/explore-rllib/extras/Extra-Application-Frozen-Lake.ipynb) | Based on the `FrozenLake-v0` environment from OpenAI Gym. |\n",
     "\n",
     "In addition, exercise solutions for this tutorial can be found [here](ray-rllib/explore-rllib/solutions/Ray-RLlib-Solutions.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Give Us Feedback!\n",
+    "\n",
+    "Let us know what you like and don't like about this reinforcement learning and Ray RLlib tutorial.\n",
+    "\n",
+    "* [Survey](https://forms.gle/D2Lo4K5tkcqsWeKU8)"
    ]
   },
   {
@@ -253,7 +288,13 @@
     "| 04  | [Ray SGD](ray-tune/04-Ray-SGD.ipynb) | The new Ray SGD API and how to use it. |\n",
     "|     | [Hyperparameter Tuning References](ray-tune/References-Hyperparameter-Tuning.ipynb) | References for hyperparameter tuning. |\n",
     "\n",
-    "In addition, exercise solutions for this tutorial can be found in the `ray-tune/solutions` directory."
+    "In addition, exercise solutions for this tutorial can be found in the `ray-tune/solutions` directory.\n",
+    "\n",
+    "#### Give Us Feedback!\n",
+    "\n",
+    "Let us know what you like and don't like about this HPO and Ray Tune tutorial.\n",
+    "\n",
+    "* [Survey](https://forms.gle/StzNufFyyDT3dapt8)"
    ]
   },
   {
@@ -281,7 +322,13 @@
     "| :-- | :----- | :---------- |\n",
     "| 00  | [Ray Serve Overview](ray-serve/00-Ray-Serve-Overview.ipynb) | Overview of this tutorial. |\n",
     "| 01  | [Model Serving Challenges](ray-serve/01-Model-Serving-Challenges.ipynb) | An explanation of common challenges moving models from research to production, and how Ray Serve addresses those challenges. |\n",
-    "| 02  | [Ray Serve Example](ray-serve/02-Ray-Serve-Example.ipynb) | An example of model serving with Ray Serve. |"
+    "| 02  | [Ray Serve Example](ray-serve/02-Ray-Serve-Example.ipynb) | An example of model serving with Ray Serve. |\n",
+    "\n",
+    "#### Give Us Feedback!\n",
+    "\n",
+    "Let us know what you like and don't like about this Model Serving with Ray Serve tutorial.\n",
+    "\n",
+    "* [Survey](https://forms.gle/7nko5QMdLzt6TmCb9)"
    ]
   },
   {
