--- a/advanced-ray/00-Overview-Advanced-Ray.ipynb
+++ b/advanced-ray/00-Overview-Advanced-Ray.ipynb
@@ -50,11 +50,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "#### Give Us Feedback!\n",
+    "\n",
+    "Let us know what you like and don't like about this reinforcement learning and Ray RLlib tutorial.\n",
+    "\n",
+    "* [Survey](https://forms.gle/PKYkFvrAf5M3jL3B8)"
+   ]
   }
  ],
  "metadata": {
