--- a/ray-crash-course/00-Overview-Ray-Crash-Course.ipynb
+++ b/ray-crash-course/00-Overview-Ray-Crash-Course.ipynb
@@ -64,6 +64,18 @@
    "source": [
     "In addition, exercise solutions for this tutorial can be found [here](solutions/Ray-Crash-Course-Solutions.ipynb)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "#### Give Us Feedback!\n",
+    "\n",
+    "Let us know what you like and don't like about this reinforcement learning and Ray RLlib tutorial.\n",
+    "\n",
+    "* [Survey](https://forms.gle/PKYkFvrAf5M3jL3B8)"
+   ]
   }
  ],
  "metadata": {
