--- a/ray-serve/00-Ray-Serve-Overview.ipynb
+++ b/ray-serve/00-Ray-Serve-Overview.ipynb
@@ -43,6 +43,17 @@
     "\n",
     "* [GitHub issues](https://github.com/anyscale/academy/issues)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Give Us Feedback!\n",
+    "\n",
+    "Let us know what you like and don't like about this Model Serving with Ray Serve tutorial.\n",
+    "\n",
+    "* [Survey](https://forms.gle/7nko5QMdLzt6TmCb9)"
+   ]
   }
  ],
  "metadata": {
