--- a/ray-tune/00-Ray-Tune-Overview.ipynb
+++ b/ray-tune/00-Ray-Tune-Overview.ipynb
@@ -56,6 +56,17 @@
     "\n",
     "* [GitHub issues](https://github.com/anyscale/academy/issues)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Give Us Feedback!\n",
+    "\n",
+    "Let us know what you like and don't like about this HPO and Ray Tune tutorial.\n",
+    "\n",
+    "* [Survey](https://forms.gle/StzNufFyyDT3dapt8)"
+   ]
   }
  ],
  "metadata": {
