--- a/ray-rllib/00-Ray-RLlib-Overview.ipynb
+++ b/ray-rllib/00-Ray-RLlib-Overview.ipynb
@@ -73,7 +73,7 @@
     "|    | Lesson | Description |\n",
     "| :- | :----- | :---------- |\n",
     "| 00 | [Explore RLlib Overview](explore-rllib/00-Explore-RLlib-Overview.ipynb) | Overview of this set of lessons. |\n",
-    "| 01 | [Application - Cart Pole](explore-rllib/01-Application-Cart-Pole.ipynb) | The best starting place for learning how to use RL, in this case to train a moving car to balance a vertical pole. Based on the `CartPole-v0` environment from OpenAI Gym, combined with RLlib. |\n",
+    "| 01 | [Application - Cart Pole](explore-rllib/01-Application-Cart-Pole.ipynb) | The best starting place for learning how to use RL, in this case to train a moving car to balance a vertical pole. Based on the `CartPole-v1` environment from OpenAI Gym, combined with RLlib. |\n",
     "| 02 | [Application: Bipedal Walker](explore-rllib/02-Bipedal-Walker.ipynb) | Train a two-legged robot simulator. This is an optional lesson, due to the longer compute times required, but fun to try. |\n",
     "| 03 | [Custom Environments and Reward Shaping](explore-rllib/03-Custom-Environments-Reward-Shaping.ipynb) | How to customize environments and rewards for your applications. |\n",
     "\n",
@@ -122,7 +122,7 @@
     "\n",
     "Next, return to the \"exploration\" lessons under `explore-rllib` and work through as many of the following lessons as time permits:\n",
     "\n",
-    "* [Application: Cart Pole](explore-rllib/03-Application-Cart-Pole.ipynb): Further exploration of the popular _CartPole_ example.\n",
+    "* [Application: Cart Pole](explore-rllib/03-Application-Cart-Pole.ipynb): Further exploration of the popular `CartPole` example.\n",
     "* [Application: Bipedal Walker](explore-rllib/04-Bipedal-Walker.ipynb): A nontrivial, but simplified robot simulator.\n",
     "* [Custom Environments and Reward Shaping](explore-rllib/05-Custom-Environments-Reward-Shaping.ipynb): More about creating custom environments for your problem. Also, finetuning the rewards to ensure sufficient exploration.\n",
     "\n",
@@ -150,11 +150,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Give Us Feedback!\n",
+    "\n",
+    "Let us know what you like and don't like about this RL and RLlib tutorial.\n",
+    "\n",
+    "* [Survey](https://forms.gle/D2Lo4K5tkcqsWeKU8)"
+   ]
   }
  ],
  "metadata": {
